<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="edit_bill">    $</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="bill_label">Bill </string>
    <string name="tip_label">Tip </string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="sharedBy_label">Shared by </string>
    <string name="perPerson_label">Per person </string>
    <string name="total_label">Total </string>
    <string name="title_activity_settings">Settings</string>
    <string name="tax">Contain tax:</string>
    <string name="ok">OK</string>
    <string name="clear">Clear</string>
    <string name="hint_tax">Tax</string>
    <string name="perc_symbol">%</string>
    <string name="hello_world">Hello world!</string>
    <string name="roundup">  Round up  </string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="title_activity_splash">SplashActivity</string>

</resources>